...
            case 1:
              context.go('/');
          }
        },
        items: const [
          BottomNavigationBarItem(
            key: Key('dashboard_tab'),
            icon: Icon(Icons.bar_chart),
            label: 'ダッシュボード',
          ),
          BottomNavigationBarItem(
            key: Key('event_list_tab'),
            icon: Icon(Icons.event_note),
            label: 'イベント一覧',
          ),
        ],
      ),
    );
  }
}
...
