...
          showPayMember: false,
          showPaymentInfoTab: true,
          markActions: [],
          linkActions: [],
          showActionTimeButton: false,
          themeColor: TopicThemeColor.emeraldGreen,
          displayName: '移動コスト（給油から計算）',
          showNameField: false,
          showMarkDate: true,
          showMarkMembers: false,
          showLinkDate: true,
        ),
      TopicType.movingCostEstimated => const TopicConfig(
...
          showPayMember: false,
          showPaymentInfoTab: true,
          markActions: [],
          linkActions: [],
          showActionTimeButton: false,
          themeColor: TopicThemeColor.amberOrange,
          displayName: '旅費可視化',
          showNameField: true,
          showMarkDate: true,
          showMarkMembers: true,
          showLinkDate: false,
        ),
      TopicType.visitWork => const TopicConfig(
...
